# ufgsim_pkg

./: .gitignore  README.md  package.xml  run.sh  setup.cfg  setup.py
config/: ufg-sim.yaml
docker/: Dockerfile
launch/: riunet_inf.launch.py
ufgsim_pkg/: model_sim_inf.py  riunet_inf.py
