<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ufgsim_pkg</name>
  <version>1.0.0</version>
  <description>The UFGSim dataset inference package for ROS 2</description>
  <maintainer email="air@todo.todo">air</maintainer>
  <license>Apache License 2.0</license>
  
  <author email="air@todo.todo">air</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>ros2_numpy</depend>
   <depend>tf_transformations</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
